# rust-pixelsorter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
resources/: icon.rgba
src/: app.rs  lib.rs  main.rs  sorter.rs
