[package]
name = "pixelsorter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
image = "0.24.6"
native-dialog = { version = "0.6.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }
rayon = "1.7.0"
